tests/ui/keyword/keyword-super-as-identifier.stderr
error[E0433]: too many leading `super` keywords within `crate`
  --> $DIR/keyword-super-as-identifier.rs:2:9
   |
LL |     let super = 22;
   |         ^^^^^ this `super` would go above the crate root

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
