tests/ui/keyword/keyword-super-as-identifier.rs
fn main() {
    let super = 22; //~ ERROR too many leading `super` keywords
}
